--- a/Paycompute/Views/Shared/_Layout.cshtml
+++ b/Paycompute/Views/Shared/_Layout.cshtml
@@ -16,25 +16,26 @@
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="~/css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
 </head>
 <body>
     <div class="container-scroller">
         <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-                <a class="navbar-brand brand-logo"> <img src="~/images/Paycompute2.gif" alt="logo"/>
+                <a class="navbar-brand brand-logo"> <img src="~/images/Paycompute2.gif" alt="logo"/></a>
             </div>
             <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
                 <partial name="_LoginPartial"/>
             </div>
         </nav>
-        <div class="container-fluid page-body-wrapper">
+    <div class="container-fluid page-body-wrapper">
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
           <ul class="nav">
               <li class="nav-item">
                   <a class="nav-link" data-toggle="collapse" href="#Employee" aria-expanded="false" aria-controls="ui-basic">
                       <i class="fas fa-users fa-lg text-primary" style="margin-right:0.7em"></i>
-                      <span class="menu-title">Employee</span>
+                      <span class="menu-title">Payroll</span>
                       <i class="menu-arrow text-primary"></i>
                   </a>
                   <div class="collapse" id="Employee">
@@ -42,13 +43,12 @@
                           <li class="nav-item"><a class="nav-link" asp-controller="Employee" asp-action="Create"> New Employee </a></li>
                           <li class="nav-item"><a class="nav-link" asp-controller="Employee" asp-action="Index"> All Employees </a></li>
                       </ul>
-
                   </div>
               </li>
 
               <li class="nav-item">
                   <a class="nav-link" data-toggle="collapse" href="#Payroll" aria-expanded="false" aria-controls="ui-basic">
-                      <i class="fas fa-pound-sign fa-lg text-primary" style="margin-right:0.7em"></i>
+                      <i class="fas fa-euro-sign fa-lg text-primary" style="margin-right:0.7em"></i>
                       <span class="menu-title">Payroll</span>
                       <i class="menu-arrow text-primary"></i>
                   </a>
@@ -57,7 +57,6 @@
                           <li class="nav-item"><a class="nav-link" asp-controller="Pay" asp-action="Create"> New Pay </a></li>
                           <li class="nav-item"><a class="nav-link" asp-controller="Pay" asp-action="Index"> Payment Records </a></li>
                       </ul>
-
                   </div>
               </li>
           </ul>
@@ -67,8 +66,8 @@
          <div class="content-wrapper">
              @RenderBody()
        </div>
-         <footer class="faster">
-             <p> &copy; @DateTime.UctNow.Year - Paycompute - <a aps-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></p>
+         <footer class="footer">
+             <p> &copy; @DateTime.UtcNow.Year - Paycompute - <a aps-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></p>
 
          </footer>
      </div>
