--- a/Paycompute/Views/Employee/Index.cshtml
+++ b/Paycompute/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EmployeeIndexViewModel>
+﻿@model EmployeeListPagination<EmployeeIndexViewModel>
 
 @{ ViewBag.Title = "Employee";}
 
@@ -13,7 +13,7 @@
                     </ol>
                 </nav><br/><br/>
                 <div class="row">
-                    <div class="col-md-12 table-responsive"-md>
+                    <div class="col-md-12 table-responsive" -md>
                         <a class="btn btn-xs btn-outline-success float-md-right" asp-action="Create"> New Employee</a>
                         <table class="table table-striped">
                             <thead>
@@ -31,35 +31,49 @@
                             <tbody>
                                 @foreach (var item in Model)
                                 {
-                                <tr>
-                                    <td>
-                                        <a asp-action="Detail" asp-route-id="@item.Id">
-                                            @item.EmployeeNo
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <img alt="image" src="@Url.Content(item.ImageUrl)" />
-                                    </td>
-                                    <td>@item.FullName</td>
-                                    <td>@item.Gender</td>
-                                    <td>@item.Designation</td>
-                                    <td>@item.City</td>
-                                    <td>@item.DateJoined.ToString("dd/MM/yyyy")</td>
-                                    <td>
-                                        <a class="text-primary" asp-action="Edit" asp-route-id="@item.Id">
-                                            <i class="fas fa-edit"></i>Edit
-                                        </a>
-                                        <a class="text-success" asp-action="Detail" asp-route-id="@item.Id">
-                                            <i class="fas fa-bars"></i>Detail
-                                        </a>
-                                        <a class="text-danger" asp-action="Delete" asp-route-id="@item.Id">
-                                            <i class="fas fa-trash-alt"></i>Delete
-                                        </a>
-                                    </td>
-                                </tr>
+                                    <tr>
+                                        <td>
+                                            <a asp-action="Detail" asp-route-id="@item.Id">
+                                                @item.EmployeeNo
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <img alt="image" src="@Url.Content(item.ImageUrl)" />
+                                        </td>
+                                        <td>@item.FullName</td>
+                                        <td>@item.Gender</td>
+                                        <td>@item.Designation</td>
+                                        <td>@item.City</td>
+                                        <td>@item.DateJoined.ToString("dd/MM/yyyy")</td>
+                                        <td>
+                                            <a class="text-primary" asp-action="Edit" asp-route-id="@item.Id">
+                                                <i class="fas fa-edit"></i>Edit
+                                            </a>
+                                            <a class="text-success" asp-action="Detail" asp-route-id="@item.Id">
+                                                <i class="fas fa-bars"></i>Detail
+                                            </a>
+                                            <a class="text-danger" asp-action="Delete" asp-route-id="@item.Id">
+                                                <i class="fas fa-trash-alt"></i>Delete
+                                            </a>
+                                        </td>
+                                    </tr>
                                 }
                             </tbody>
-                        </table>
+                        </table> </br>
+                        @{
+                            var disablePrevious = !Model.IsPreviousPageAvailable ? "disabled" : "";
+                            var disableNext = !Model.IsNextPageAvailable ? "disabled" : "";
+                        }
+                        <a asp-action="Index"
+                           asp-route-pageNumber="@(Model.PageIndex - 1)"
+                           class="btn btn-primary @disablePrevious">
+                            Previous
+                        </a>
+                        <a asp-action="Index"
+                           asp-route-pageNumber="@(Model.PageIndex + 1)"
+                           class="btn btn-primary @disableNext">
+                            Next
+                        </a>
                     </div>
                 </div>
             </div>
